<resources>
    <string name="app_name">INSTAGRAMKU</string>
    <string name="artha_sukmaa">artha_sukmaa</string>
    <string name="postingan">Postingan</string>
    <string name="_457">457</string>
    <string name="pengikut">pengikut</string>
    <string name="_0">0</string>
    <string name="_816">816</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="diikuti_oleh">Diikuti oleh</string>
    <string name="artha_sukma_ambarwati">artha sukma ambarwati</string>
    <string name="marisaanita_stevanivivi_meisyanurdianita">marisaanita, stevanivivi, meisyanurdianita</string>
    <string name="dan_62_lainnya">dan 62 lainnya</string>
    <string name="ikuti">ikuti</string>
    <string name="kirim_pesan">kirim pesan</string>
    <string name="email">Email</string>
</resources>